--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.10",
     "nodemon": "^3.1.4",
+    "prettier": "3.3.3",
     "typescript": "^5.5.3"
   }
 }
