--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
+        "format": "prettier --write \"src/**/*.ts\"",
         "build": "npx tsc",
         "start": "node dist/index.js",
         "dev": "nodemon src/index.ts"
