--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
         "mongoose": "^8.5.0",
-        "ts-node": "^10.9.2"
+        "ts-node": "^10.9.2",
+        "zod": "^3.23.8"
     },
     "devDependencies": {
         "@types/cors": "^2.8.17",
