--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "express": "^4.19.2",
         "mongoose": "^8.5.0",
         "ts-node": "^10.9.2",
+        "yup": "^1.4.0",
         "zod": "^3.23.8"
     },
     "devDependencies": {
